# inertia-django-full-of-juice

./: .coveragerc  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  sonar-project.properties
.claude/agent-memory/compliance-reviewer/: MEMORY.md  advisory_issue5_version_header_409.md  divergence_ssr_exclude.md  divergence_v3_completion.md  open_gaps_v3_completion.md  reference_sha.md
.claude/agent-memory/django-conventions-reviewer/: MEMORY.md  deprecation-watch.md  django-52-header-conventions.md  house-style-test-client-kwargs.md
.claude/agent-memory/laravel-comparator/: MEMORY.md  asset_version_handling.md  flash_and_rescued_props.md  precognition_ownership.md  shared_props_metadata.md  ssr_route_exclusion.md  test_coverage_map.md  validation_errors.md  version_change_reflash.md  version_header_on_409.md
.claude/agent-memory/protocol-researcher/: MEMORY.md  flash-shared-rescued.md  location-event-version-change.md  once-props.md  precognition.md  v3-coverage-gaps.md  v3-protocol-surface.md  validation-errors.md
.claude/agents/: compliance-reviewer.md  django-conventions-reviewer.md  laravel-comparator.md  protocol-researcher.md
.claude/commands/: mutation-testing.md
.claude/rules/: main-rules.md
.github/workflows/: playwright.yml  pr.yml  publish-coverage.yml  publish-package.yml  test_pypi_publish.py
inertia/: __init__.py  apps.py  http.py  infinite_scroll.py  middleware.py  precognition.py  prop_classes.py  settings.py  test.py  utils.py
inertia/templates/: inertia.html
inertia/tests/: settings.py  test_errors_flow.py  test_flash.py  test_history.py  test_http.py  test_infinite_scroll.py  test_logging.py  test_middleware.py  test_precognition.py  test_public_api.py  test_registry_alignment.py  test_rendering.py  test_rescue.py  test_settings.py  test_shared_props.py  test_ssr.py  test_tests.py  test_typed_helpers.py
inertia/tests/testapp/: urls.py  views.py
playwright_e2e/: README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
playwright_e2e/tests/: asset-version-background.spec.ts  asset-version.spec.ts  deferred-props.spec.ts  error-bags.spec.ts  errors-response.spec.ts  flash-messages.spec.ts  flash.spec.ts  form-validation.spec.ts  history.spec.ts  home.spec.ts  infinite-scroll.spec.ts  merge.spec.ts  messages-recipe.spec.ts  method-conversion.spec.ts  once-props.spec.ts  partial-reload.spec.ts  precognition.spec.ts  redirects.spec.ts  rescued-props.spec.ts  serialization.spec.ts
playwright_e2e/tests-ssr/: ssr-exclusion.spec.ts
sample_project/: .gitignore  Dockerfile  Dockerfile.ssr  E2E_TESTING.md  README.md  biome.json  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
sample_project/frontend/: inertia-resolver.tsx  main.tsx  ssr.tsx
sample_project/frontend/pages/: Bags.tsx  Chain.tsx  Feed.tsx  Flash.tsx  FlashNative.tsx  Form.tsx  History.tsx  Home.tsx  Lazy.tsx  Lists.tsx  Method.tsx  Poll.tsx  Precognition.tsx  Rescue.tsx  Roster.tsx  Validate.tsx
sample_project/sample/: settings.py  urls.py
sample_project/sample/apps/core/: apps.py  middleware.py  models.py  urls.py  views.py
sample_project/sample/apps/core/migrations/: 0001_initial.py  0002_seed_players.py
sample_project/scripts/: start-web.sh
sample_project/templates/: base.html
scripts/: start-formatter-lint.sh  start-tests.sh  triage_mutmut_survivors.py
