[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "inertia-django-full-of-juice"
version = "0.1.0"
description = "It's an opinionated Django adapter for the InertiaJS framework"
authors = [
    {name = "Tinuvi", email = "no-reply@tinuvi.com"}
]
license = "MIT"
readme = "README.md"

[project.urls]
repository = "https://github.com/tinuvi/inertia-django-full-of-juice"
"Bug Tracker" = "https://github.com/tinuvi/inertia-django-full-of-juice/issues"

[tool.poetry]
packages = [{ include = "inertia" }]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.11"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-django = "^4.10.0"
ruff = "^0.15.2"
mypy = "^1.20.2"
django-stubs = {extras = ["compatible-mypy"], version = "^6.0.3"}
types-requests = "^2.33.0.20260408"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "F", # Pyflakes
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
ignore = ["E501"] # line too long, formatter will handle this
unfixable = ["B", "SIM"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "inertia.tests.settings"
django_find_project = false

[tool.mypy]
python_version = "3.14"
plugins = ["mypy_django_plugin.main"]
strict = true
exclude = [
    "inertia/test.*"
]

[tool.django-stubs]
django_settings_module = "inertia.tests.settings"

