[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "inertia-django-full-of-juice"
version = "0.1.0"
description = "It's an opinionated Django adapter for the InertiaJS framework"
authors = [
    {name = "Tinuvi", email = "no-reply@tinuvi.com"}
]
license = "MIT"
readme = "README.md"

[project.urls]
repository = "https://github.com/tinuvi/inertia-django-full-of-juice"
"Bug Tracker" = "https://github.com/tinuvi/inertia-django-full-of-juice/issues"

[tool.poetry]
packages = [{ include = "inertia" }]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.11"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
coverage = "~=7.13"
pyrefly = "~=1.0"
ruff = "^0.15.2"
django-stubs = "~=6.0"
types-requests = "^2.33.0.20260408"
mutmut = "^3.5.0"

[tool.ruff]
target-version = "py314"
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "F", # Pyflakes
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
ignore = ["E501"] # line too long, formatter will handle this
unfixable = ["B", "SIM"]

[tool.pyrefly.errors]
bad-override-param-name = false

[tool.pyrefly]
python-version = "3.14"
project-includes = ["inertia"]
project-excludes = [
    "**/migrations/**",
    "**/__pycache__",
    "**/*venv/**",
    ".github/workflows/test_pypi_publish.py",
    "inertia/test.py",
    "inertia/tests/**",
]
check-unannotated-defs = false
infer-return-types = "checked"
permissive-ignores = true

[tool.mutmut]
paths_to_mutate = ["inertia"]
pytest_add_cli_args_test_selection = [
    "inertia/tests/test_encoder.py",
    "inertia/tests/test_history.py",
    "inertia/tests/test_http.py",
    "inertia/tests/test_infinite_scroll.py",
    "inertia/tests/test_logging.py",
    "inertia/tests/test_middleware.py",
    "inertia/tests/test_registry_alignment.py",
    "inertia/tests/test_rendering.py",
    "inertia/tests/test_ssr.py",
    "inertia/tests/test_tests.py",
    "inertia/tests/test_typed_helpers.py",
]
also_copy = ["conftest.py"]
type_check_command = ["pyrefly", "check", "--output-format=json"]
debug = false

