[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "sample-project"
version = "0.0.0"
description = "Thin Django + React sample exercising inertia-django-full-of-juice"
authors = [
    {name = "Tinuvi", email = "no-reply@tinuvi.com"}
]
license = "MIT"
readme = "../README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.11"
django-vite = "^3.1.0"
inertia-django-full-of-juice = { path = "../", develop = true }
